added media queries

--- a/src/styles/how-it-works.scss
+++ b/src/styles/how-it-works.scss
@@ -9,6 +9,7 @@
     margin-top: 61px;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
   }
 
   &__item {
@@ -27,5 +28,57 @@
       color: $dark-grey-color;
     }
 
+  }
+}
+
+@media(min-width: 320px) and (max-width: 1220px) {
+  .how-it-works {
+    padding-top: 56px;
+
+    &__list {
+      margin-top: 42px;
+      row-gap: 32px;
+    }
+
+    &__item {
+      display: flex;
+      column-gap: 16px;
+      width: 342px;
+
+      .icon {
+        width: 56px;
+        height: 56px;
+        flex-shrink: 0;
+      }
+
+      p {
+        width: 270px;
+      }
+    }
+  }
+}
+
+@media(min-width: 320px) and (max-width: 768px) {
+  .how-it-works {
+    .headline-2 {
+      font-size: 24px;
+      line-height: 32px;
+    }
+
+    &__list {
+      margin-top: 26px;
+    }
+  }
+}
+
+@media(min-width: 320px) and (max-width: 375px) {
+  .how-it-works {
+    &__item {
+      width: 288px;
+
+      p {
+        width: 216px;
+      }
+    }
   }
 }
