--- a/src/styles/articles.scss
+++ b/src/styles/articles.scss
@@ -16,3 +16,37 @@
     margin-bottom: 17px;
   }
 }
+
+@media(min-width: 769px) and (max-width: 1220px) {
+  .articles {
+    padding: 20px 0 32px;
+
+    &__wrapper {
+      row-gap: 20px;
+    }
+  }
+
+  .article {
+    width: 100%;
+
+    &__wrapper {
+      row-gap: 46px;
+    }
+
+    .body-text-18 {
+      margin-bottom: 46px;
+    }
+  }
+}
+
+@media(min-width: 376px) and (max-width: 768px) {
+  .articles {
+    padding: 20px 0 21px;
+  }
+
+  .article {
+    .body-text-18 {
+      margin-bottom: 14px;
+    }
+  }
+}
