--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -62,4 +62,46 @@
       }
     }
   }
+
+  &__mobile {
+    display: none;
+  }
+}
+
+@media(min-width: 320px) and (max-width: 1220px) {
+  .header {
+    .headline-1 {
+      font-size: 32px;
+      line-height: 40px;
+    }
+
+    .nav {
+      &__list {
+        display: none;
+      }
+
+      &__mobile {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 62px;
+        height: 62px;
+        position: absolute;
+        top: 9px;
+        right: 0;
+        row-gap: 8px;
+
+        span {
+          display: block;
+          width: 22px;
+          height: 2px;
+          background-color: $white-color;
+        }
+      }
+    }
+  }
+
+
+
 }
