--- a/src/styles/questions.scss
+++ b/src/styles/questions.scss
@@ -20,6 +20,8 @@
     border-top: 1px solid $extralight-grey-color;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    column-gap: 20px;
 
     &:hover>p {
       color: $primary-color;
@@ -48,5 +50,48 @@
     width: 936px;
     color: $dark-grey-color;
     margin-bottom: 24px;
+  }
+}
+
+@media(min-width: 320px) and (max-width: 1220px) {
+  .questions {
+    padding: 56px 0;
+
+    &__wrapper {
+      width: 100%;
+    }
+
+    &__summary {
+      align-items: flex-start;
+    }
+
+    &__button {
+      flex-shrink: 0;
+      margin-top: 5px;
+    }
+
+    &__text {
+      width: 100%;
+    }
+  }
+}
+
+@media(min-width: 320px) and (max-width: 768px) {
+  &__text {
+    font-size: 16px;
+    line-height: 28px;
+  }
+
+  .headline-2 {
+    font-size: 24px;
+    line-height: 32px;
+  }
+}
+
+@media(min-width: 320px) and (max-width: 375px) {
+  .questions {
+    &__wrapper {
+      margin-top: 28px;
+    }
   }
 }
