--- a/src/styles/reviews.scss
+++ b/src/styles/reviews.scss
@@ -1,9 +1,33 @@
 .reviews {
-  padding-top: 80px;
-  padding-bottom: 45px;
+  padding: 80px 0 83px;
   background-color: $extralight-grey-color;
 
   .headline-2 {
     text-align: center;
+  }
+}
+
+@media(min-width: 769px) and (max-width: 1220px) {
+  .reviews {
+    padding: 33px 0 83px;
+
+    .container {
+      width: 100%;
+    }
+  }
+}
+
+@media(min-width: 320px) and (max-width: 768px) {
+  .reviews {
+    padding: 27px 0 65px;
+
+    .container {
+      width: 100%;
+    }
+
+    .headline-2 {
+      font-size: 24px;
+      line-height: 32px;
+    }
   }
 }
