--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -1,50 +1,36 @@
-.slider {
-  width: 1238px;
-  margin: 32px auto 0 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  justify-content: space-between;
-  align-items: center;
+.swiper {
+  width: 1127px;
+  width: 100%;
+  height: 356px;
+  padding: 20px !important;
 
-  &__wrapper {
-    display: flex;
-    column-gap: 32px;
-    align-items: center;
+  &-container {
+    position: relative;
+    width: 1215px;
+    margin: 0 auto;
   }
 
-  &__slides {
-    display: flex;
-    column-gap: 32px;
+  &-wrapper {
+    align-items: stretch;
   }
 
-  &__button {
-    width: 32px;
-    height: 32px;
-    background-position: center center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    border: none;
+  &-slide {
+    width: 341px;
+    height: auto;
+    border-radius: 8px;
+    padding: 22px;
+    background-color: $white-color;
+    box-shadow: 0px 5px 24px 0px rgba(0, 0, 0, 0.1);
     cursor: pointer;
-    background-color: transparent;
-
-    &_prev {
-      background-image: url('../images/reviews_arrow-disabled.svg');
-    }
-
-    &_next {
-      background-image: url('../images/reviews_arrow-disabled.svg');
-      transform: rotate(180deg);
-    }
   }
 
-  &__bullets {
-    margin-top: 50px;
+  &-pagination-bullets {
     display: flex;
     column-gap: 17px;
+    position: absolute;
   }
 
-  &__bullet {
+  &-pagination-bullet {
     width: 8px;
     height: 8px;
     border-radius: 50%;
@@ -54,6 +40,14 @@
     &_active {
       background-color: $primary-color;
     }
+  }
+
+  &-pagination-bullets.swiper-pagination-horizontal {
+    bottom: -30px !important;
+    left: 50% !important;
+    transform: translateX(-50%) !important;
+    display: flex;
+    justify-content: center;
   }
 
   .body-text-12 {
@@ -82,10 +76,78 @@
       background: url('../images/reviews_avatar-1.png');
     }
 
+    &_2 .slide__avatar {
+      background: url('../images/reviews_avatar-2.png');
+    }
+
+    &_3 .slide__avatar {
+      background: url('../images/reviews_avatar-3.png');
+    }
+
     &__header {
       display: flex;
       column-gap: 16px;
       margin-bottom: 20px;
     }
+  }
+
+
+}
+
+.button-prev,
+.button-next {
+  position: absolute;
+  z-index: 3;
+  top: 50%;
+  left: 0px;
+  width: 32px;
+  height: 32px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  background-color: transparent;
+  background-image: url('../images/reviews_arrow-active.svg');
+}
+
+.button-next {
+  left: auto;
+  right: 0;
+  transform: rotate(180deg);
+}
+
+.button-disabled {
+  background-image: url('../images/reviews_arrow-disabled.svg');
+}
+
+@media(min-width: 769px) and (max-width: 1219px) {
+  .swiper {
+    width: 100%;
+  }
+
+  .swiper-container {
+    width: 727px;
+  }
+
+  .button-prev,
+  .button-next {
+    display: none;
+  }
+}
+
+@media(min-width: 320px) and (max-width: 768px) {
+  .swiper {
+    width: 100%;
+    padding: 16px !important
+  }
+
+  .swiper-container {
+    width: 100%;
+  }
+
+  .button-prev,
+  .button-next {
+    display: none;
   }
 }
