--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -2,6 +2,17 @@
   width: 100%;
   position: absolute;
   z-index: 2;
+
+  &_hidden {
+    display: none;
+  }
+
+  &__container {
+    max-width: 1216px;
+    width: 100%;
+    padding: 0 16px;
+    margin: 0 auto;
+  }
 }
 
 .logo {
@@ -91,6 +102,7 @@
         top: 9px;
         right: 0;
         row-gap: 8px;
+        cursor: pointer;
 
         span {
           display: block;
